k8s/reviews/reviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: adan762/reviews:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8006
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8006
            initialDelaySeconds: 20    # give app more boot time
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5        # retry longer before failing

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8006
            initialDelaySeconds: 60    # Spring Boot startup can be slow
            periodSeconds: 20
