k8s/reviews/reviews-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  selector:
    app: reviews
  ports:
    - port: 8006
      targetPort: 8006
  type: ClusterIP
