k8s/reviews/reviews-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviews-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /api/reviews(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: reviews
                port:
                  number: 8006
